--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
-    "react-router-dom": "^6.11.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.11.1",
     "react-type-animation": "^3.0.1",
     "vite-plugin-svgr": "^2.4.0"
   },
